--- a/style.css
+++ b/style.css
@@ -6,15 +6,21 @@
 }
 
 /* @font-face { */
-  /* font-family: "sans"; */
-  /* src: url(font/sans.ttf); */
+/* font-family: "sans"; */
+/* src: url(font/sans.ttf); */
 /* } */
 
 body {
+  background-image: url("download (1).png"); /* Add this line for the background image */
   background-color: #c2864a;
+  background-size: cover;
+  height: 2px;
+  background-repeat: no-repeat;
 }
 
 .container {
+  gap: 5rem;
+  padding-bottom: 30px;
   width: 40%;
   height: 500px;
   margin: 3rem auto;
@@ -52,7 +58,8 @@ input {
   font-size: 16px;
 }
 
-.addBtn,.editBtn {
+.addBtn,
+.editBtn {
   padding: 10px;
   width: 25%;
   background: #ffd662ff;
@@ -137,8 +144,8 @@ footer a:visited {
   }
 }
 
-@media(max-width:400px){
-  .val{
+@media (max-width: 400px) {
+  .val {
     text-align: left;
   }
 }
